# rtoscout

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  company.json  docker-compose.yml  main.py  pyproject.toml  run.py  run.sb
rtoscout/: __init__.py  config.py  pipeline.py
rtoscout/data/: __init__.py  preprocessor.py  sec_downloader.py
rtoscout/engine/: __init__.py  analyzer.py  retriever.py
rtoscout/index/: __init__.py  embedder.py  vector_store.py
rtoscout/schemas/: __init__.py  models.py
