[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RTOScout"
version = "0.1.0"
description = "RTOScout: RTO 10-K RAG + LLM scoring (local: HuggingFace + Ollama)"
readme = "README.md"
authors = []
packages = [{ include = "rtoscout", from = "." }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = ">=0.3.0"
langchain-community = ">=0.3.0"
langchain-chroma = ">=0.1.0"
langchain-ollama = ">=0.2.0"
langchain-text-splitters = ">=0.3.0"
chromadb = ">=0.5.0"
python-dotenv = ">=1.0.0"
requests = ">=2.31.0"
beautifulsoup4 = ">=4.12.0"
pydantic = ">=2.0.0"
sec-edgar-downloader = ">=5.0.0"
sentence-transformers = ">=2.2.0"
jupyter = ">=1.0.0"
